--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-redux": "^5.0.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.1.1",
+    "react-stripe-elements": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
