--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
+    "body-parser": "^1.18.3",
     "compression": "^1.7.1",
     "connect-session-sequelize": "^4.1.0",
-    "express": "^4.14.1",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
     "history": "^4.6.3",
     "morgan": "^1.8.1",
@@ -52,11 +53,13 @@
     "react-redux": "^5.0.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.1.1",
+    "react-stripe-elements": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.3.1",
     "socket.io": "^2.0.3",
+    "stripe": "^6.4.0",
     "travis": "^0.1.1"
   },
   "devDependencies": {
