--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "compression": "^1.7.1",
     "connect-session-sequelize": "^4.1.0",
     "express": "^4.16.3",
